force-app/main/default/objects/vlocity_cmt__BusinessSiteOffering__c/vlocity_cmt__BusinessSiteOffering__c.object-meta.xml
<CustomObject>
    <description>Store offerings enable you to describe the different types of services available at a given store location such as bill payment and equipment returns, but could also represent products generally available at that store.</description>
    <label>Store Offering</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Store Offerings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>