force-app/main/default/objects/vlocity_cmt__BusinessSiteOffering__c/fields/vlocity_cmt__BusinessSiteId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__BusinessSiteId__c</fullName>
    <label>Store Location</label>
    <referenceTo>vlocity_cmt__BusinessSite__c</referenceTo>
    <relationshipLabel>Store Offerings</relationshipLabel>
    <relationshipName>SiteServicesProducts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>